Full skeleton project with 2 modules (business logic ans system test).  Added dependency to AssertJ into System Test project.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name = 'apache.cxf.jaxrs.test'
+include 'TestBL'
+findProject(':TestBL')?.name = 'apache.cxf.jaxrs.test-bl'
+include 'TestST'
+findProject(':TestST')?.name = 'apache.cxf.jaxrs.test-st'
 
