Add Dockerfile to have a image with tomcat for the project and a gradle task to make the deploy.

--- a/TestBL/build.gradle
+++ b/TestBL/build.gradle
@@ -9,6 +9,13 @@ repositories {
     mavenCentral()
 }
 
+task deployOnDocker(type: Copy, dependsOn: ['war']){
+    from 'build/libs'
+    into 'docker/webapps'
+    include '*.war'
+    rename "service(\\W|\\w)+\\.war", "service.war"
+}
+
 war {
     baseName = 'service'
 }
