--- a/TestBL/build.gradle
+++ b/TestBL/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     def weldVersion = '2.1.2.Final'
     def cxfVersion = '3.0.0'
     def jacksonVersion = '2.2.3'
+    def lombokVersion = '1.16.6'
 
     compile group: 'javax.enterprise', name:'cdi-api', version:"${cdiVersion}"
 
@@ -43,6 +44,8 @@ dependencies {
 
     compile group: 'org.jboss.weld.servlet', name:'weld-servlet', version:"${weldVersion}"
     compile group: 'org.jboss.weld', name:'weld-core', version:"${weldVersion}"
+
+    compile group: 'org.projectlombok', name: 'lombok', version:"${lombokVersion}"
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.2.0'
